changed background colour of grid to avoid visible white pixels when the blocks didn't fit the whole row

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 #grid-container {
-    background-color: white;
+    background-color: #4e4e4e;
     border-color: #4e4e4e;
     border-style: solid;
     border-width: thick;
